# earlcoin-algo

./: .algokit.toml  README.md  earlcoin-algo.code-workspace  pyproject.toml
.algokit/: .copier-answers.yml
.github/workflows/: earlcoin-algo-contracts-cd.yaml  earlcoin-algo-contracts-ci.yaml  earlcoin-algo-frontend-cd.yaml  earlcoin-algo-frontend-ci.yaml  release.yaml  validate.yaml
projects/earlcoin-algo-contracts/: .algokit.toml  Proposals.md  README.md  compile_contract.py  compile_governance.py  config_governance.py  create_asa.py  create_kyc_nft.py  deploy_contract.py  deploy_governance.py  make_proposal.py  pyproject.toml
projects/earlcoin-algo-contracts/.algokit/: .copier-answers.yml
projects/earlcoin-algo-contracts/.tours/: getting-started-with-your-algokit-project.tour
projects/earlcoin-algo-contracts/contracts/: governance.py
projects/earlcoin-algo-contracts/scripts/: app_optin_usdc.py  call_set_param.py  check_app.py  deploy_app.py  noop.py  update_app.py
projects/earlcoin-algo-contracts/smart_contracts/earlcoin/: __init__.py  contract.py  deploy_config.py
projects/earlcoin-algo-contracts/tests/: earlcoin_client_test.py  earlcoin_test.py
projects/earlcoin-algo-frontend/: .algokit.toml  README.md  package.json
projects/earlcoin-algo-frontend/.algokit/: .copier-answers.yml
projects/earlcoin-algo-frontend/src/components/: AppCalls.tsx
